// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLink snapshot active 1`] = `
<a
  aria-current="page"
  className="w3-bar-item w3-button w3-mobile w3-hover-theme green w3-theme-d5"
  href="/about"
  onClick={[Function]}
  style={Object {}}
>
  test
</a>
`;

exports[`NavLink snapshot inactive 1`] = `
<a
  aria-current={null}
  className="w3-bar-item w3-button w3-mobile w3-hover-theme green"
  href="/about"
  onClick={[Function]}
>
  test
</a>
`;
